<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#65000000">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/panel_white_round"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPickTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:text="@string/label_date_pick"
            android:textColor="@color/labelDark"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/layoutDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spnDay"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_day"
                    android:textColor="@color/labelDark"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spnMonth"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_month"
                    android:textColor="@color/labelDark"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spnYear"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_pick_year"
                    android:textColor="@color/labelDark"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            tools:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spnHour"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_hour"
                    android:textColor="@color/labelDark"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spnMinute"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvMinute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_minute"
                    android:textColor="@color/labelDark"
                    android:textSize="16dp" />

            </LinearLayout>

        </LinearLayout>

        <com.pilates.app.controls.RoundButton
            android:id="@+id/rbPick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            app:buttonBg="@drawable/button_bg_green"
            app:textColoring="@color/wooLabelGreen"
            app:textIsBold="true"
            app:textLabel="@string/btn_select" />
    </LinearLayout>
</FrameLayout>